--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -52,9 +52,34 @@
     .hero-text-box { padding: 0 4%; }    
     .col { 
         width: 100%; 
-        margin: 0 0 1% 0;
+        margin: 0 0 1% 0;    
     }    
-    .main-nav { display: none; }
+    
+    .main-nav { display: none; }     
+    .main-nav { 
+        float: left; 
+        margin-top: 30px;
+        margin-left: 25px;
+    }    
+    .main-nav li {
+        display: block;
+    }    
+    .main-nav li a:link,
+    .main-nav li a:visited {
+        display: block;
+        border: 0;
+        padding: 10px 0;
+        font-size: 100%;
+    }
+    
+    .mobile-nav-icon { display: inline-block; }   
+    
+    .sticky .main-nav { margin-top: 10px }
+    .sticky .main-nav li a:link,
+    .sticky .main-nav li a:visited { padding: 10px; }
+    .sticky .mobile-nav-icon i { color: #555; }
+    .sticky .mobile-nav-icon { margin-top: 11px; }    
+    
     .long-copy {
         width: 100%;
         margin-left: 0%;
@@ -63,8 +88,7 @@
     .steps-box:first-child { text-align: center; }
 
     .works-step { margin-bottom: 30px;}
-    .works-step:last-of-type { margin-bottom: 20px; }
-    
+    .works-step:last-of-type { margin-bottom: 20px; }    
     .works-step div {             
         height: 40px;
         width: 40px;        
