--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -523,7 +523,7 @@ cite img {
 /* --------------------------------------------------- */
 
 .contact-form {
-    width: 60%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -547,9 +547,32 @@ input[type=checkbox] {
 
 *:focus { outline: none; }
 
+.map-box {
+    width: 100%;
+    height: 560px;
+    position: relative;
+}
+
+.map {
+    width: 50%;
+    height: 560px;
+    position: relative;
+    z-index: 0;
+}
+
+.form-box {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, 0.83);
+    z-index: 10;
+    height: 560px;
+    padding-top: 40px;
+    width: 50%;
+}
 
 /* --------------------------------------------------- */
-/* CONTACT FORM */
+/* FOOTER */
 /* --------------------------------------------------- */
 
 footer {
