--- a/resources/css/style-teal.css
+++ b/resources/css/style-teal.css
@@ -77,7 +77,7 @@ h3 {
 h2:after {
     display: block;
     height: 2px;
-    background-color: #e67e22;
+    background-color: #22c8e6;
     content: "";
     width: 100px;
     margin: 0 auto;
@@ -100,7 +100,7 @@ h2:after {
 .icon-big {
     font-size: 350%;
     display: block;
-    color: #e67e22;
+    color: #22c8e6;
     margin-bottom: 10px;
 }
 
@@ -108,7 +108,7 @@ h2:after {
     display: inline-block;
     width: 30px;
     text-align: center;
-    color: #e67e22;
+    color: #22c8e6;
     font-size: 120%;
     margin-right: 10px;
     
@@ -122,10 +122,10 @@ h2:after {
 
 a:link,
 a:visited {
-    color: #e67e22;
+    color: #22c8e6;
     text-decoration: none;
     padding-bottom: 1px;
-    border-bottom: 1px solid #e67e22;
+    border-bottom: 1px solid #22c8e6;
     -webkit-transition: border-bottom 0.2s, color 0.2s;
     transition: border-bottom 0.2s, color 0.2s;
 }
@@ -152,35 +152,35 @@ input[type=submit] {
 .btn-full:link,
 .btn-full:visited,
 input[type=submit] {
-    background-color: #e67e22; 
-    border: 1px solid #e67e22;
+    background-color: #22c8e6; 
+    border: 1px solid #22c8e6;
     color: #fff;
     margin-right: 15px;
 }
 
 .btn-ghost:link,
 .btn-ghost:visited {
-    border: 1px solid #e67e22;
-    color: #e67e22;   
+    border: 1px solid #22c8e6;
+    color: #22c8e6;   
 }
 
 .btn:hover,
 .btn:active, 
 input[type=submit]:hover,
 input[type=submit]:active {
-    background-color: #cf6d17;
+    background-color: #17a5cf;
 }
 
 .btn-full:hover,
 .btn-full:active,
 input[type=submit] {    
-    border: 1px solid #cf6d17;
+    border: 1px solid #17a5cf;
     cursor: pointer;
 }
 
 .btn-ghost:hover,
 .btn-ghost:active {
-    border: 1px solid #cf6d17;
+    border: 1px solid #17a5cf;
     color: #fff;
 }
 
@@ -249,7 +249,7 @@ header {
 
 .main-nav li a:hover,
 .main-nav li a:active {
-    border-bottom: 2px solid #e67e22;
+    border-bottom: 2px solid #22c8e6;
 }
 
 
@@ -374,8 +374,8 @@ header {
 }
 
 .works-step div {
-    color: #e67e22;
-    border: 2px solid #e67e22;
+    color: #22c8e6;
+    border: 2px solid #22c8e6;
     display: inline-block;
     border-radius: 50%;
     height: 55px;
@@ -492,7 +492,7 @@ cite img {
     font-size: 300%;
     margin-bottom: 10px;
     font-weight: 100;
-    color: #e67e22;
+    color: #22c8e6;
 }
 
 .plan-price span {
