minor tweak on contact submit button border color

--- a/resources/css/style-teal.css
+++ b/resources/css/style-teal.css
@@ -174,7 +174,7 @@ input[type=submit]:active {
 .btn-full:hover,
 .btn-full:active,
 input[type=submit] {    
-    border: 1px solid #0e5e76;
+    border: 1px solid #1a9fb7;
     cursor: pointer;
 }
 
